#5.5: BUG solved + more: now add BD all positions; and make Position collapsable

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap');
 
 * {
-    transition: all 0.3s;
+    /* transition: all 0.1s; */
     clear: both;
 }
 
